Major fixes and updates-Added new pages and updated navbar and footer

--- a/join.html
+++ b/join.html
@@ -59,17 +59,26 @@ Author URL: http://w3layouts.com
               <a class="dropdown-item" href="theteam.html">The Team</a>
               <a class="dropdown-item" href="faq.html">FAQs</a>
              </div>
+		  </li>
+		  <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Ambassadors
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="ambassador.html">Ambassadors</a>
+              <a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
+             </div>
           </li>
           <li>
             <a class="nav-link" href="activities.html">Activities</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Partner
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Partner
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="collaboration.html">Collaborations</a>
-              <a class="dropdown-item" href="sponsors.html">Sponsors</a>
+              <a class="dropdown-item" href="partner.html#collaborations">Collaborations</a>
+              <a class="dropdown-item" href="partner.html#sponsors">Sponsors</a>
              </div>
           </li>
           <li> <a class = "nav-link" href="resources.html">Resources</a>
@@ -97,9 +106,9 @@ Author URL: http://w3layouts.com
        <!-- /features -->
            <div class="features py-5" id="services">
 			<div class="container py-md-3">
-
-        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script>
-        <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shruWDrkBYQ5m8JjW?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="1848" style="background: transparent; border: 1px solid #ccc;"></iframe>
+        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js%22%3E"></script>
+        <iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shr2ELSXCbn8T0lYA?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="2200px" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+        
    <!-- //features -->
   
 </section>
@@ -111,7 +120,7 @@ Author URL: http://w3layouts.com
               <div class="footer-list-29 footer-1">
                   <h6 class="footer-title-29">Contact Us</h6>
                   <ul>
-                      <li><p><span class="fa fa-map-marker"></span> 25, The Precincts, The Kings School, Bursars Office, Canterbury, UK</p></li>
+                      <li><p style="line-height: 1.5;"><span class="fa fa-map-marker"></span> 25, The Precincts, The Kings School, Bursars Office, Canterbury, UK</p></li>
                       <li><a href="restem@ysjournal.com" class="mail"><span class="fa fa-envelope-open-o"></span>restem@ysjournal.com</a></li>
                   </ul>
                   <div class="main-social-footer-29">
