--- a/calendar.html
+++ b/calendar.html
@@ -158,10 +158,8 @@ Author URL: http://w3layouts.com
                       <li><span class="fa fa-check"></span>Hub exhibition: Exhibition of the research and projects undertaken by students.</li>
                     </ul>
                 </div>
-                <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
-                    <img src="assets/images/g4.jpg" class="img-fluid" alt="" />
-                </div>
             </div>
+            <iframe class="airtable-embed" src="https://airtable.com/embed/shrbk67IQnZtzoPFQ?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
         </div>
     </div>
 </section>
