--- a/research101.html
+++ b/research101.html
@@ -108,29 +108,34 @@ Author URL: http://w3layouts.com
         <div class="container py-md-5">
             <div class="cwp4-two row">
                 <div class="cwp4-text col-lg-6">
-                  <h3>Research 101</h3>
+                  <h3>Research 101</h3><br>
+                  <b>Learn skills to:</b>
+                  <ul class="cont-4">
+                    <li><span class="fa fa-check"></span>Conduct a research project.</li>
+                    <li><span class="fa fa-check"></span>Publish your research.</li>
+                    <li><span class="fa fa-check"></span>Present at a conference.</li>
+                    <li><span class="fa fa-check"></span>Compete in a science fair.</li>
+                  </ul>
                     <br>
                     <b>LIST OF WORKSHOPS:</b>
-                    <p>(Introduction)</p>
+                    <p>(Prologue)</p>
                     <ol class="cont-4">
                         <li>Introduction to STEM and research.</li>
                         <li>The art of reading scientific literature.</li>
-                        <li>Writing scientific articles.</li>
+                        <li>The science of writing scientific articles.</li>
                     </ol>
                     <p>(Beginner’s Guide to High School Research)</p>
                     <ol class="cont-4" start="4">
                         <li>Identifying a research problem.</li>
                         <li>Designing a hypothesis and project.</li>
-                        <li>Research experimentation.</li>
+                        <li>AI and data science for research.</li>
                         <li>Data analysis and drawing conclusions.</li>
-                        <li>Theoretical proofs.</li>
                     </ol>
                     <p>(Crash course in tangential skills)</p>
-                    <ol class="cont-4" start="9">
-                        <li>Introduction to LaTeX.</li>
-                        <li>Writing a synopsis and research paper.</li>
-                        <li>Poster and oral presentation.</li>
-                        <li>Peer review and editing in a scientific context.</li>
+                    <ol class="cont-4" start="8">
+                        <li>LaTeX for beginners.</li>
+                        <li>Science fairs and presenting research.</li>
+                        <li>Peer review and editing.</li>
                     </ol>
                 </div>
                 <div class="cwp4-image col-lg-6 pl-lg-5 mt-lg-0 mt-5">
