--- a/research101.html
+++ b/research101.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel= "icon" href="restemlogo.png" type="image/png">
 
-    <title>Project reSTEM : reimagining STEM</title>
+    <title>reSTEM : reimagining STEM</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <!-- //web fonts -->
@@ -77,8 +77,9 @@ Author URL: http://w3layouts.com
              Partner
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="partner.html#collaborations">Collaborations</a>
-              <a class="dropdown-item" href="partner.html#sponsors">Sponsors</a>
+              <a class="dropdown-item" href="partner.html#collaborations">Collaborate</a>
+              <a class="dropdown-item" href="partner.html#sponsors">Sponsor</a>
+              <a class="dropdown-item" href="partner.html#ourpartners">Our Partners</a>
              </div>
           </li>
           <li> <a class = "nav-link" href="resources.html">Resources</a>
