--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel= "icon" href="restemlogo.png" type="image/png">
 
-    <title>Project reSTEM : reimagining STEM</title>
+    <title>reSTEM : reimagining STEM</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <!-- //web fonts -->
@@ -77,8 +77,9 @@ Author URL: http://w3layouts.com
              Partner
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="partner.html#collaborations">Collaborations</a>
-              <a class="dropdown-item" href="partner.html#sponsors">Sponsors</a>
+              <a class="dropdown-item" href="partner.html#collaborations">Collaborate</a>
+              <a class="dropdown-item" href="partner.html#sponsors">Sponsor</a>
+              <a class="dropdown-item" href="partner.html#ourpartners">Our Partners</a>
              </div>
           </li>
           <li> <a class = "nav-link" href="resources.html">Resources</a>
@@ -106,8 +107,7 @@ Author URL: http://w3layouts.com
        <!-- /features -->
            <div class="features py-5" id="services">
 			<div class="container py-md-3">
-        <iframe class="airtable-embed" src="https://airtable.com/embed/shrRNWX36NY2p57ZV?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="1845" style="background: transparent; border: 1px solid #ccc;"></iframe>
-
+        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js%22%3E"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrRNWX36NY2p57ZV?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="2083" style="background: transparent; border: 1px solid #ffffff;"></iframe>
    <!-- //features -->
   
 </section>
