Added 'Our Partners' Section

--- a/partner.html
+++ b/partner.html
@@ -10,7 +10,7 @@ Author URL: http://w3layouts.com
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel= "icon" href="restemlogo.png" type="image/png">
 
-    <title>Project reSTEM : reimagining STEM</title>
+    <title>reSTEM : reimagining STEM</title>
     <!-- web fonts -->
     <link href="//fonts.googleapis.com/css?family=Work+Sans:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
     <!-- //web fonts -->
@@ -77,9 +77,10 @@ Author URL: http://w3layouts.com
              Partner
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="partner.html#collaborations">Collaborations</a>
-              <a class="dropdown-item" href="partner.html#sponsors">Sponsors</a>
-             </div>
+				<a class="dropdown-item" href="partner.html#collaborations">Collaborate</a>
+				<a class="dropdown-item" href="partner.html#sponsors">Sponsor</a>
+				<a class="dropdown-item" href="partner.html#ourpartners">Our Partners</a>
+			   </div>
           </li>
           <li> <a class = "nav-link" href="resources.html">Resources</a>
           </li>
@@ -127,6 +128,13 @@ Author URL: http://w3layouts.com
 						Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
                     </p>
 						<h3 id="sponsors">Sponsors</h3>
+                    <ul class="cont-4">
+                        <li><span class="fa fa-check"></span>Materiality & Interpretation</li>
+                        <li><span class="fa fa-check"></span>Design Management and Cultural Enterprise </li>
+                        <li><span class="fa fa-check"></span>Experience Design (XD)</li>
+                        <li><span class="fa fa-check"></span>Sound Design; Social Media and SEO </li>
+					</ul>
+					<h3 id="ourpartners">Our Partners</h3>
                     <ul class="cont-4">
                         <li><span class="fa fa-check"></span>Materiality & Interpretation</li>
                         <li><span class="fa fa-check"></span>Design Management and Cultural Enterprise </li>
