--- a/partner.html
+++ b/partner.html
@@ -112,8 +112,8 @@ Author URL: http://w3layouts.com
                 <div class="cwp4-text col-lg-6">
                         <h3 id="collaborations">Collaborate</h3>
 					<p><ul class="cont-4">
-						<li><span class="fa fa-check"></span>Produce a reSTEM Safari session introducing a field of STEM.</li>
-						<li><span class="fa fa-check"></span>Organise a reSTEM Compass session introducing career and academic opportunities (e.g. science fairs, uni admissions etc.)</li>
+						<li><span class="fa fa-check"></span>Organise a <a href="reSTEM_Safari.pdf" target="_blank"><u>reSTEM Safari</u></a> session introducing a field of STEM.</li>
+						<li><span class="fa fa-check"></span>Organise a <a href="reSTEM_Compass.pdf" target="_blank"><u>reSTEM Compass</u></a> session introducing career and academic opportunities (e.g. science fairs, uni admissions etc.)</li>
 						<li><span class="fa fa-check"></span>Organise a contest for reSTEM Hubs.</li>
 					</ul></p>
 						<h3 id="sponsors">Sponsor</h3>
@@ -125,7 +125,7 @@ Author URL: http://w3layouts.com
 					</ul></p>
 					<h3 id="ourpartners">Our Partners</h3>
                     <p>We firmly believe that a cause can only benefit from diverse people and institutions coming together . Hence, we are eager to partner with organisations sharing our aims.  
-We’d love to hear from you on restem@ysjournal.com for any inquiries about partnership.</p>
+We’d love to hear from you on <a href="mailto:restem@ysjournal.com" class="mail"><u>restem@ysjournal.com</u></a> for any inquiries about partnership.</p>
                 </div>
             </div>
         </div>
