--- a/calendar.html
+++ b/calendar.html
@@ -111,6 +111,7 @@ Author URL: http://w3layouts.com
                
                 <div class="cwp4-text col-lg-6">
                     <p><b>SAMPLE HUB ACTIVITIES (IN CLASS) CALENDAR</b></p>
+			<iframe class="airtable-embed" src="https://airtable.com/embed/shrbk67IQnZtzoPFQ?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
                     <ul class="cont-4">
                         <li><span class="fa fa-check"></span><b>Recommended:</b> One-hour session every week / Two 30 minute sessions a week</li>
                     </ul>
