--- a/partner.html
+++ b/partner.html
@@ -108,9 +108,10 @@ Author URL: http://w3layouts.com
     <div id="content-with-photo4-block" class="pt-5"> 
         <div class="container py-md-5">
             <div class="cwp4-two row">
-               
+                <h3 id="ourpartners">Our Partners</h3>
+		<iframe class="airtable-embed" src="https://airtable.com/embed/shrmXIDTStZizQhc1?backgroundColor=pink" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
                 <div class="cwp4-text col-lg-6">
-                  <h3 id="ourpartners">Our Partners</h3>
+                  <h3>Partner With Us</h3>
                   <p>We firmly believe that a cause can only benefit from diverse people and institutions coming together . Hence, we are eager to partner with organisations sharing our aims.  
 We’d love to hear from you on <a href="mailto:restem@ysjournal.com" class="mail"><u>restem@ysjournal.com</u></a> for any inquiries about partnership.</p>
                         <h3 id="collaborations">Collaborate</h3>
