--- a/theteam.html
+++ b/theteam.html
@@ -107,42 +107,28 @@ Author URL: http://w3layouts.com
 <section class="w3l-content-with-photo-4">
     <div id="content-with-photo4-block" class="pt-5"> 
         <div class="container py-md-5">
-            <div class="cwp4-two row">
-               
-                <div class="cwp4-text col-lg-6">
+            <div class="cwp4-two row">   
+             <div class="cwp4-text col-lg-6">
 						<h3>The Team</h3>	
-			
-				</div>
-				<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
-				<br>
-				<br>
-				<div class="cwp4-text col-lg-6">	
-					<br>
+            <br>
 						<ul class="cont-4">					
 							<li><span class="fa fa-check"></span>Alumni from:</li>
-								<img src="logos/isef_logo.png" height="90">
-								<img src="logos/RSI.png" height="90">
-								<img src="logos/SSP.png" height="90">
-								<img src="logos/IRIS.png" height="90">
-								<img src="logos/KVPY.png" height="90"><br><br>
+								<img src="logos/isef_logo.png" height="150" style="padding: 15px;">
+								<img src="logos/RSI.png" height="150" style="padding: 15px;">
+								<img src="logos/SSP.png" height="150" style="padding: 15px;">
+								<img src="logos/IRIS.png" height="150" style="padding: 15px;">
+								<img src="logos/KVPY.png" height="150" style="padding: 15px;"><br>
 							<li><span class="fa fa-check"></span>35 high school and undergraduate students.</li>
 							<li><span class="fa fa-check"></span>From 15 countries across the world.</li>
 							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li>
 							<li><span class="fa fa-check"></span>35 high school and undergraduate students.</li>
-							<p><li><span class="fa fa-check"></span><b>Advisors: </b><br>- Laura Mawby, Physics Teacher, Kings School, Canterbury <br>
-								- Malcolm Morgan, Research Fellow, Leeds University.</li></p>
-							
-
-					</ul>
-					<p>The Young Scientists Journal is an international, youth-led peer-reviewed STEM journal for researchers aged 12-20, It endeavours to promote STEM across the world. Over the past decade, it has been the mode of choice for young researchers for getting their work published, being the oldest and largest organisation of its kind. Print issues of the journal are released twice a year, packed with original research, review articles, reports, and interviews. We also hold annual conferences, which have taken place in Cambridge and Oxford and have featured talks from high-profile academics with delegates from all over Europe. It is a non-profit organisation registered in England and Wales.</p>
-					<ul class="cont-4">					
-						<li><span class="fa fa-check"></span>Member of:</li>
-						<img src="logos/csforall.png" height="90">
-						<img src="logos/fc.png" height="90">
-					</ul>	
-				</div>
+							<p><li><span class="fa fa-check"></span><b>Advisors: </b>
+          </ul>
+        </div>
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+        <iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
 				</div>	
-            </div>
+        </div>
         </div>>
     </div>
 </section>
