--- a/signup.html
+++ b/signup.html
@@ -107,7 +107,7 @@ Author URL: http://w3layouts.com
        <!-- /features -->
            <div class="features py-5" id="services">
 			<div class="container py-md-3">
-        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js%22%3E"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrRNWX36NY2p57ZV?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="2083" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+        <style>.forms-studio{position:relative;padding-bottom:56.25%;overflow:hidden;width:100%;height:600px;}.forms-studio iframe{position:absolute;top:0;left:0;width:100%;height:100%;border:0;}</style><div class='forms-studio'><iframe src='https://script.google.com/macros/s/AKfycbw0sZVXv396iqQhZbY3Xeyk7siA7H4n-mjGFZufh2_J3arFjTkX/exec'></iframe></div>
    <!-- //features -->
   
 </section>
