--- a/ambassador.html
+++ b/ambassador.html
@@ -106,7 +106,7 @@ Author URL: http://w3layouts.com
            <div class="features py-5" id="services">
 			<div class="container py-md-3">
 
-        <iframe class="airtable-embed" src="https://airtable.com/embed/shrEbZDRlfvnDF4Sa?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
+        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shrRNWX36NY2p57ZV?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="2511" style="background: transparent; border: 1px solid #ffffff;"></iframe>
 
    <!-- //features -->
   
