--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Author URL: http://w3layouts.com
             <div class="banner-info">
               <div class="container">
                 <div class="banner-info-bg mx-auto text-center">
-                  <h5>Publish your reesearch</h5>
+                  <h5>Publish your research</h5>
                   <a class="btn btn-secondary btn-theme2 mt-md-5 mt-4" href="activities.html">Read More</a>
                 </div>
               </div>
