--- a/theteam.html
+++ b/theteam.html
@@ -109,22 +109,25 @@ Author URL: http://w3layouts.com
              <div class="cwp4-text col-lg-6">
 						<h3>The Team</h3>	
             <br>
-						<ul class="cont-4">					
+						<ul class="cont-4">	
+							<li><span class="fa fa-check"></span>30 high school and undergraduate students.</li>
+							<li><span class="fa fa-check"></span>From 15 countries across the world.</li>
+							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li>
 							<li><span class="fa fa-check"></span>Alumni from:</li>
+		     </ul></div>
 								<img src="logos/isef_logo.png" height="150" style="padding: 15px;">
 								<img src="logos/RSI.png" height="150" style="padding: 15px;">
 								<img src="logos/SSP.png" height="150" style="padding: 15px;">
 								<img src="logos/IRIS.png" height="150" style="padding: 15px;">
 								<img src="logos/KVPY.png" height="150" style="padding: 15px;"><br>
-							<li><span class="fa fa-check"></span>35 high school and undergraduate students.</li>
-							<li><span class="fa fa-check"></span>From 15 countries across the world.</li>
-							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li>
-							<li><span class="fa fa-check"></span>35 high school and undergraduate students.</li>
-							<p><li><span class="fa fa-check"></span><b>Advisors: </b>
-          </ul>
-        </div>
-        <iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
-        <iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+							          
+							</div> <h3> The people </h3>
+        	<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+		<br> <br> <br> <br>
+		    <h3> Our advisors </h3>
+		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+        
+	
 				</div>	
         </div>
         </div>>
