--- a/theteam.html
+++ b/theteam.html
@@ -122,7 +122,7 @@ Author URL: http://w3layouts.com
 								<img src="logos/KVPY.png" height="150" style="padding: 15px;"><br>
 							          
 							</div> <h3> The people </h3>
-        	<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
+        	<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" width="100%" height="100vh" style="background: transparent; border: 1px solid #ffffff;"></iframe>
 		<br> <br> <br> <br>
 		    <h3> Our advisors </h3>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
