--- a/theteam.html
+++ b/theteam.html
@@ -115,7 +115,7 @@ Author URL: http://w3layouts.com
 							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li>
 							<li><span class="fa fa-check"></span>Alumni from:</li>
 		     </ul></div>
-		    <br>
+		    <br> </div>
 								<img src="logos/isef_logo.png" height="150" style="padding: 15px;">
 								<img src="logos/RSI.png" height="150" style="padding: 15px;">
 								<img src="logos/SSP.png" height="150" style="padding: 15px;">
@@ -125,7 +125,7 @@ Author URL: http://w3layouts.com
 		    <h3 id="adv"> Our advisors </h3>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
         	<br> <br> <br> <br>			          
-							</div> <h3> The people </h3>
+							<h3> The people </h3>
         	<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" width="100%" height="1800" style="background: transparent; border: 1px solid #ffffff;"></iframe>
 		
 		    
