--- a/theteam.html
+++ b/theteam.html
@@ -120,12 +120,12 @@ Author URL: http://w3layouts.com
 								<img src="logos/RSI.png" height="150" style="padding: 15px;">
 								<img src="logos/SSP.png" height="150" style="padding: 15px;">
 								<img src="logos/IRIS.png" height="150" style="padding: 15px;">
-								<img src="logos/KVPY.png" height="150" style="padding: 15px;"><br>
+								<img src="logos/KVPY.png" height="150" style="padding: 15px;"><br> <br>
 	<div>
-		    <h3 id="adv"> Our advisors </h3>
+		    <h3 id="adv"> Our advisors </h3> <br> <br>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
         	<br> <br> <br> <br>			          
-							<h3> The people </h3>
+							<h3> The people </h3> <br> <br>
         	<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" width="100%" height="1900" style="background: transparent; border: 1px solid #ffffff;"></iframe>
 		</div>
 		    
