--- a/theteam.html
+++ b/theteam.html
@@ -110,19 +110,19 @@ Author URL: http://w3layouts.com
 						<h3>The Team</h3>	
             <br>
 						<ul class="cont-4">	
-							<li><span class="fa fa-check"></span>30 high school and undergraduate students.</li>
-							<li><span class="fa fa-check"></span>From 15 countries across the world.</li>
-							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li>
-							<li><span class="fa fa-check"></span>Alumni from:</li>
+							<li><span class="fa fa-check"></span>30 high school and undergraduate students.</li> <br>
+							<li><span class="fa fa-check"></span>From 15 countries across the world.</li> <br>
+							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li> <br>
+							<li><span class="fa fa-check"></span>Alumni from:</li><br>
 		     </ul></div>
 		    <br> </div>
-								<img src="logos/isef_logo.png" height="150" style="padding: 15px;">
-								<img src="logos/RSI.png" height="150" style="padding: 15px;">
-								<img src="logos/SSP.png" height="150" style="padding: 15px;">
-								<img src="logos/IRIS.png" height="150" style="padding: 15px;">
-								<img src="logos/KVPY.png" height="150" style="padding: 15px;"><br> <br>
+								<img src="logos/isef_logo.png" height="200" style="padding: 15px;">
+								<img src="logos/RSI.png" height="200" style="padding: 15px;">
+								<img src="logos/SSP.png" height="200" style="padding: 15px;">
+								<img src="logos/IRIS.png" height="200" style="padding: 15px;">
+								<img src="logos/KVPY.png" height="200" style="padding: 15px;"><br> <br>
 	<div>
-		    <h3 id="adv"> Our advisors </h3> <br> <br>
+		    <h3 id="adv"> Our advisors </h3> <br>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
         	<br> <br> <br> <br>			          
 							<h3> The people </h3> <br> <br>
