--- a/theteam.html
+++ b/theteam.html
@@ -108,19 +108,19 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">   
              <div class="cwp4-text col-lg-6">
 						<h3>The Team</h3>	
-            <br> <h5>
+            <br> <h4>
 						<ul class="cont-4">	
 							<li><span class="fa fa-check"></span>30 high school and undergraduate students.</li> <br>
 							<li><span class="fa fa-check"></span>From 15 countries across the world.</li> <br>
 							<li><span class="fa fa-check"></span>Cumulative research experience: 60+ research projects undertaken, 20+ research papers published.</li> <br>
-							<li><span class="fa fa-check"></span>Alumni from:</li><br>
-		     </ul></div> </h5>
+							<li><span class="fa fa-check"></span>Alumni from world's top science fairs, research programs and fellowships.</li><br>
+		     </ul></div> </h4>
 		    <br> </div>
 								<img src="logos/isef_logo.png" height="180" style="padding: 15px;">
 								<img src="logos/RSI.png" height="180" style="padding: 15px;">
 								<img src="logos/SSP.png" height="180" style="padding: 15px;">
 								<img src="logos/IRIS.png" height="180" style="padding: 15px;">
-								<img src="logos/KVPY.png" height="180" style="padding: 15px;"><br> <br>
+								<img src="logos/KVPY.png" height="180" style="padding: 15px;"><br> <br> <br>
 	<div>
 		    <h3 id="adv"> Our advisors </h3> <br>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
