--- a/theteam.html
+++ b/theteam.html
@@ -108,8 +108,7 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">   
              <div class="cwp4-text col-lg-6">
 						<h3>The Team</h3>	
-            <br> 
-						<ul class="cont-4" >	
+            						<ul class="cont-4" >	
 							<h4>
 							<li><span class="fa fa-check"></span>30 high school and undergraduate students.</li>							
 							<li><span class="fa fa-check"></span>From 15 countries across the world.</li> 
@@ -128,7 +127,7 @@ Author URL: http://w3layouts.com
 		    <h3 id="adv"> Our advisors </h3> <br>
 		<iframe class="airtable-embed" src="https://airtable.com/embed/shrs5JJGlAYbXvUiy?backgroundColor=cyan" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ffffff;"></iframe>
         	<br> <br> <br> <br>			          
-							<h3> The people </h3> <br> <br>
+							<h3> Our team </h3> <br> <br>
         	<iframe class="airtable-embed" src="https://airtable.com/embed/shrN6kP7OUtsvgHP5?backgroundColor=cyan" frameborder="0" width="100%" height="2300" style="background: transparent; border: 1px solid #ffffff;"></iframe>
 		</div>
 		    
