Added conf pic for home page

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Author URL: http://w3layouts.com
 							<a class="btn btn-secondary btn-theme2 mt-3" href="activities.html"> Read More</a>
 				</div>
 				<div class="column ccont-left col-lg-6">
-					<img src="assets/images/g1.jpg" class="img-responsive" alt="">
+					<img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt="">
 				</div>
 			</div>
 		</div>
