Updated navbar and minor updates

--- a/activities.html
+++ b/activities.html
@@ -26,7 +26,7 @@ Author URL: http://w3layouts.com
 		<div class="container">
 	<header class="row top-menu-top">
 		<div class="accounts col-md-9 col-6">
-				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:restem@ysjournal.com" class="mail"> restem@ysjournal.com</a>	</li>
+				<li class="top_li1"><span class="fa fa-envelope-o"></span> <a href="mailto:restem@ysjournal.com" class="mail">restem@ysjournal.com</a>	</li>
 		</div>
 		<div class="social-top col-md-3 col-6">
 			<a href="join.html" class="btn btn-secondary btn-theme4">Join</a>
@@ -69,8 +69,18 @@ Author URL: http://w3layouts.com
               <a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
              </div>
           </li>
-          <li>
-            <a class="nav-link" href="activities.html">Activities</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Activities
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="activities.html">Overview</a>
+              <a class="dropdown-item" href="activities.html#research101">Research 101</a>
+              <a class="dropdown-item" href="activities.html#discoveringstem">Discovering STEM</a>
+              <a class="dropdown-item" href="activities.html#exploringstem">Exploring STEM</a>
+              <a class="dropdown-item" href="activities.html#decodingstem">Decoding STEM</a>
+              <a class="dropdown-item" href="activities.html#hubjournal">Hub Journal</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -111,17 +121,17 @@ Author URL: http://w3layouts.com
                         <h3>Activities</h3>
                     <p>Hubs have the flexibility to conduct any STEM-related activities, though the focus is expected to be on research. The following activities are directly supported by the YSJ: </p>
                     <ul class="cont-4">
-                        <li><span class="fa fa-check"></span><b>Exploration module:</b> Learn about prospects in research and STEM</li>
+                        <li><span class="fa fa-check"></span><b>Exploration module:</b></li>
                         <ul>
-                          <li><u><a href="restem_safari.html" target="_top">reSTEM Safari</a></u>, a series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
-                          <li><u><a href="restem_compass.html" target="_top">reSTEM Compass</a></u>, a series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li>
+                          <li><u><a href="discoveringstem.html" target="_top" name="discoveringstem">Discovering STEM</a></u>, a series of introductory sessions (seminars, activities etc) to introduce members to different fields of STEM like Artificial Intelligence, neuroscience, Bioinformatics, etc in collaboration with specialising organisations.</li>
+                          <li><u><a href="decodingstem.html" target="_top" name="decodingstem">Decoding STEM</a></u>, a series of sessions on career and academic opportunities like science fairs, research programs, entrepreneurship, international university admissions, olympiads etc. in collaboration with specialising organizations.</li>
                         </ul>
-                        <li><span class="fa fa-check"></span><b>Foundation module:</b> Learn skills for research</li>
+                        <li><span class="fa fa-check"></span><b>Foundation module:</b></li>
                         <ul>
-                          <li><u><a href="research101.html" target="_top">Research 101</a></u>, research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
-                          <li>reSTEM Kaleidoscope- Talks by experienced scientists and student researchers about their experience.</li>
+                          <li><u><a href="research101.html" target="_top" name="research101">Research 101</a></u>, research skill building workshops for conducting research, writing research papers and participating in science fairs.</li>
+                          <li><a name="exploringstem">Exploring STEM</a> - Talks by experienced scientists and student researchers about their experience.</li>
                         </ul>
-                        <li><span class="fa fa-check"></span><b>Immersion module:</b> Learn by performing research</li>
+                        <li><span class="fa fa-check"></span><b>Immersion module:</b></li>
                         <ul>
                           <li>Members will get access to an exclusive, curated database of guided science projects to learn research skills hands-on without having to conduct an original project.</li>
                           <li>reSTEM Challenge: Certificate for completing original research project and writing research paper.</li>
@@ -129,7 +139,7 @@ Author URL: http://w3layouts.com
                           <li>Mentorship to selected original research projects.</li>
                           <li>Recognition for best projects.</li>
                         </ul>
-                        <li><span class="fa fa-check"></span><b>Hub Journal:</b> Learn to write about research and STEM</li>
+                        <li><span class="fa fa-check"></span><a name="hubjournal"><b>Hub Journal:</b></a></li>
                         <ul>
                           <li>Produce local editions of the YSJournal for your community.</li>
                           <li>Award and recognition for best Hub Journal.</li>
