--- a/discoveringstem.html
+++ b/discoveringstem.html
@@ -69,8 +69,18 @@ Author URL: http://w3layouts.com
               <a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
              </div>
           </li>
-          <li>
-            <a class="nav-link" href="activities.html">Activities</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Activities
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="activities.html">Overview</a>
+              <a class="dropdown-item" href="activities.html#research101">Research 101</a>
+              <a class="dropdown-item" href="activities.html#discoveringstem">Discovering STEM</a>
+              <a class="dropdown-item" href="activities.html#exploringstem">Exploring STEM</a>
+              <a class="dropdown-item" href="activities.html#decodingstem">Decoding STEM</a>
+              <a class="dropdown-item" href="activities.html#hubjournal">Hub Journal</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -96,8 +106,8 @@ Author URL: http://w3layouts.com
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>reSTEM Safari</h2>
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; <a href="activities.html">Activities</a> &nbsp; / &nbsp; reSTEM Safari</p>
+      <h2>Discovering STEM</h2>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; <a href="activities.html">Activities</a> &nbsp; / &nbsp; Discovering STEM</p>
     </div>
   </div>
 </section>
@@ -107,9 +117,9 @@ Author URL: http://w3layouts.com
         <div class="container py-md-5">
             <div class="cwp4-two row">
                 <div class="cwp4-text col-lg-6">
-                    <p><b>reSTEM Safari (2020-21 list yet to be finalised; finalised sessions in bold)</b></p>
+                    <p><b>Discovering STEM (2020-21 list yet to be finalised; finalised sessions in bold)</b></p>
                     <ul class="cont-4">
-                        <li><b>A reSTEM Safari session consists of :</b></li>
+                        <li><b>Discovering STEM session consists of :</b></li>
                         <li><span class="fa fa-check"></span>A 30 minute video introducing a STEM field and prospects in it.</li>
                         <li><span class="fa fa-check"></span>Hands-on learning activity.</li>
                         <li><span class="fa fa-check"></span>Recommended material for further learning.</li>
