--- a/signup.html
+++ b/signup.html
@@ -69,8 +69,18 @@ Author URL: http://w3layouts.com
               <a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
              </div>
           </li>
-          <li>
-            <a class="nav-link" href="activities.html">Activities</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Activities
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="activities.html">Overview</a>
+              <a class="dropdown-item" href="activities.html#research101">Research 101</a>
+              <a class="dropdown-item" href="activities.html#discoveringstem">Discovering STEM</a>
+              <a class="dropdown-item" href="activities.html#exploringstem">Exploring STEM</a>
+              <a class="dropdown-item" href="activities.html#decodingstem">Decoding STEM</a>
+              <a class="dropdown-item" href="activities.html#hubjournal">Hub Journal</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -92,7 +102,7 @@ Author URL: http://w3layouts.com
         </a>
     </div>
   </nav>
-</section>  
+</section>
 <section class="w3l-service-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
