--- a/decodingstem.html
+++ b/decodingstem.html
@@ -69,8 +69,18 @@ Author URL: http://w3layouts.com
               <a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
              </div>
           </li>
-          <li>
-            <a class="nav-link" href="activities.html">Activities</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Activities
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="activities.html">Overview</a>
+              <a class="dropdown-item" href="activities.html#research101">Research 101</a>
+              <a class="dropdown-item" href="activities.html#discoveringstem">Discovering STEM</a>
+              <a class="dropdown-item" href="activities.html#exploringstem">Exploring STEM</a>
+              <a class="dropdown-item" href="activities.html#decodingstem">Decoding STEM</a>
+              <a class="dropdown-item" href="activities.html#hubjournal">Hub Journal</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -96,8 +106,8 @@ Author URL: http://w3layouts.com
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
-      <h2>reSTEM Compass</h2>
-      <p><a href="index.html">Home</a> &nbsp; / &nbsp; <a href="activities.html">Activities</a> &nbsp; / &nbsp; reSTEM Compass</p>
+      <h2>Decoding STEM</h2>
+      <p><a href="index.html">Home</a> &nbsp; / &nbsp; <a href="activities.html">Activities</a> &nbsp; / &nbsp; Decoding STEM</p>
     </div>
   </div>
 </section>
@@ -108,7 +118,7 @@ Author URL: http://w3layouts.com
             <div class="cwp4-two row">
                
                 <div class="cwp4-text col-lg-6">
-                    <p><b>reSTEM Compass</b></p>
+                    <p><b>Decoding STEM</b></p>
                     <p><b>The following subjects are being considered for Safari sessions :</b></p>
                     <ol>
                       <li>Science fairs</li>
