--- a/theteam.html
+++ b/theteam.html
@@ -37,62 +37,72 @@ Author URL: http://w3layouts.com
 </section>
 <!-- //Top Menu 1 -->
 <section class="w3l-bootstrap-header">
-	<nav class="navbar navbar-expand-lg navbar-light py-lg-2 py-2">
-	  <div class="container">
-		<a class="navbar-brand" href="index.html">
-		  <img src="restem.png" alt="reSTEM" title="reSTEM" style="height:35px;" />
-	  </a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-		  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		  <span class="navbar-toggler-icon fa fa-bars"></span>
-		</button>
-  
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-		  <ul class="navbar-nav mx-auto">
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				About
-			  </a>
-			  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="mission.html">The Mission</a>
-				<a class="dropdown-item" href="ysj.html">Young Scientists Journal</a>
-				<a class="dropdown-item" href="theteam.html">The Team</a>
-				<a class="dropdown-item" href="faq.html">FAQs</a>
-			   </div>
-			</li>
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			   Ambassadors
-			  </a>
-			  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="ambassador.html">Ambassadors</a>
-				<a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
-			   </div>
-			</li>
-			<li>
-			  <a class="nav-link" href="activities.html">Activities</a>
-			</li>
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			   Partner
-			  </a>
-			  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="partner.html#collaborations">Collaborate</a>
-				<a class="dropdown-item" href="partner.html#sponsors">Sponsor</a>
-				<a class="dropdown-item" href="partner.html#ourpartners">Our Partners</a>
-			   </div>
-			</li>
-			<li class="nav-item">
-			  <a class="nav-link" href="contact.html">Contact</a>
-			</li>
-		  </ul>
-		</div>
-		<a class="navbar-brand" href="https://www.ysjournal.com" target="_blank">
-		  <img src="ysj.png" alt="Young Scientists Journal" title="YSJ" style="height:50px;" />
-		  </a>
-	  </div>
-	</nav>
-  </section>
+  <nav class="navbar navbar-expand-lg navbar-light py-lg-2 py-2">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">
+        <img src="restem.png" alt="reSTEM" title="reSTEM" style="height:35px;" />
+    </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon fa fa-bars"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="mission.html">The Mission</a>
+              <a class="dropdown-item" href="ysj.html">Young Scientists Journal</a>
+              <a class="dropdown-item" href="theteam.html">The Team</a>
+              <a class="dropdown-item" href="faq.html">FAQs</a>
+             </div>
+		  </li>
+		  <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Ambassadors
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="ambassador.html">Ambassadors</a>
+              <a class="dropdown-item" href="signup.html">Become a reSTEM Ambassador</a>
+             </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Activities
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="activities.html">Overview</a>
+              <a class="dropdown-item" href="activities.html#research101">Research 101</a>
+              <a class="dropdown-item" href="activities.html#discoveringstem">Discovering STEM</a>
+              <a class="dropdown-item" href="activities.html#exploringstem">Exploring STEM</a>
+              <a class="dropdown-item" href="activities.html#decodingstem">Decoding STEM</a>
+              <a class="dropdown-item" href="activities.html#hubjournal">Hub Journal</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="partner.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             Partner
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="partner.html#collaborations">Collaborate</a>
+              <a class="dropdown-item" href="partner.html#sponsors">Sponsor</a>
+              <a class="dropdown-item" href="partner.html#ourpartners">Our Partners</a>
+             </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <a class="navbar-brand" href="https://www.ysjournal.com" target="_blank">
+        <img src="ysj.png" alt="Young Scientists Journal" title="YSJ" style="height:50px;" />
+        </a>
+    </div>
+  </nav>
+</section>
 <section class="w3l-about-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
