Edited page content

--- a/activities.html
+++ b/activities.html
@@ -127,7 +127,7 @@ Author URL: http://w3layouts.com
                           <li><span class="fa fa-check"></span><a name="exploringstem">Exploring STEM</a> - Talks by experienced scientists and student researchers about their experience.</li>
                           <li><span class="fa fa-check"></span>Members will get access to an exclusive, curated database of guided science projects to learn research skills hands-on without having to conduct an original project.</li>
                           <li><span class="fa fa-check"></span>reSTEM Challenge: Certificate for completing original research project and writing research paper.</li>
-                          <li><span class="fa fa-check"></span>Publish in the Young Scientists Journal.</li>
+                          <li><span class="fa fa-check"></span><a name="hubjournal">Publish in the Young Scientists Journal.</a></li>
                           <li><span class="fa fa-check"></span>Mentorship to selected original research projects.</li>
                           <li><span class="fa fa-check"></span>Recognition for best projects.</li>
                           <li><span class="fa fa-check"></span>Produce local editions of the YSJournal for your community.</li>
