--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@ Author URL: http://w3layouts.com
                             
                            <div class="cont-add-rgt">
                             <h4>Address:</h4>
-                            <p class="contact-text-sub">PO Box 1212, California, US</p>
+                            <p class="contact-text-sub">King's School, Canterbury, UK</p>
                         </div>
                         <div class="cont-add-lft">
                             <span class="fa fa-map-marker" aria-hidden="true"></span>
@@ -148,11 +148,10 @@ Author URL: http://w3layouts.com
                             <div class="cont-add-rgt">
                                  <h4>Find Us On</h4>
                                  <div class="main-social-1 mt-2">
-                                    <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
-                                    <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
-                                    <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
-                                    <a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
-                                    <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                                    <a href="#facebook" class="https://facebook.com/ysjournal"><span class="fa fa-facebook"></span></a>
+                                    <a href="httpd://twitter.com/YSJournal" class="twitter"><span class="fa fa-twitter"></span></a>
+                                    <a href="#instagram" class="https://instagram.com/ysjournal"><span class="fa fa-instagram"></span></a>
+                                                                   <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
                                 </div>
                             </div>
                             <div class="cont-add-lft">
