--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,21 @@ Author URL: http://w3layouts.com
     </div>
   </nav>
 </section>
+<!-- Start of HubSpot code snippet -->
+<button type="button" id="hs_remove_cookie_button"
+  style="background-color: #425b76; border: 1px solid #425b76;
+         border-radius: 3px; padding: 10px 16px; text-decoration: none; color: #fff;
+         font-family: inherit; font-size: inherit; font-weight: normal; line-height: inherit;
+         text-align: left; text-shadow: none;"
+  onClick="(function removeCookies(){
+    var _hsp = window._hsp = window._hsp || [];
+    _hsp.push(['revokeCookieConsent']);
+  })()"
+>
+  Remove cookies
+</button>
+
+<!-- End of HubSpot code snippet -->
 <section class="w3l-contact-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
@@ -111,6 +126,9 @@ Author URL: http://w3layouts.com
     </div>
   </div>
 </section>
+	 <!-- Start of HubSpot Embed Code -->
+<script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/8200947.js"></script>
+<!-- End of HubSpot Embed Code -->
 <!-- contact -->
 <section class="w3l-contacts-12" id="contact">
     <div class="contact-top pt-5">
