--- a/contact.html
+++ b/contact.html
@@ -103,21 +103,6 @@ Author URL: http://w3layouts.com
     </div>
   </nav>
 </section>
-<!-- Start of HubSpot code snippet -->
-<button type="button" id="hs_remove_cookie_button"
-  style="background-color: #425b76; border: 1px solid #425b76;
-         border-radius: 3px; padding: 10px 16px; text-decoration: none; color: #fff;
-         font-family: inherit; font-size: inherit; font-weight: normal; line-height: inherit;
-         text-align: left; text-shadow: none;"
-  onClick="(function removeCookies(){
-    var _hsp = window._hsp = window._hsp || [];
-    _hsp.push(['revokeCookieConsent']);
-  })()"
->
-  Remove cookies
-</button>
-
-<!-- End of HubSpot code snippet -->
 <section class="w3l-contact-breadcrum">
   <div class="breadcrum-bg py-sm-5 py-4">
     <div class="container py-lg-3">
@@ -243,7 +228,8 @@ Author URL: http://w3layouts.com
     <span class="fa fa-angle-up"></span>
   </button>
   <script>
-    // When the user scrolls down 20px from the top of the document, show the button
+    // When the user 
+	  s down 20px from the top of the document, show the button
     window.onscroll = function () {
       scrollFunction()
     };
